--- a/Ex/index.html
+++ b/Ex/index.html
@@ -280,7 +280,7 @@
         const userInput = document.getElementById('userInput');
         const sendButton = document.getElementById('sendButton');
         
-        let GOOGLE_AI_API_KEY = "AIzaSyBux30U0tCGKI4NgZN4UtKHN1Ab_h1a6HI";
+        let GOOGLE_AI_API_KEY = "Enter your api key";
         // This is CRITICAL for the AI to have memory of the conversation
         const chatHistory = []; 
 
